--- a/index.html
+++ b/index.html
@@ -215,6 +215,61 @@ http://www.templatemo.com/tm-513-avalon
         </div>
     </section>      
 
+    <section class="contact-us" id="contact-section"> 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <form id="contact" action="" method="post">
+                        <div class="row">
+                            <h3 style="color:rgb(232, 232, 235);">Send us a message</h3>
+                            <br>
+                            <div class="col-md-4">
+                              <fieldset>
+                                <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                              </fieldset>
+                            </div>
+                            <div class="col-md-4">
+                              <fieldset>
+                                <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                              </fieldset>
+                            </div>
+                             <div class="col-md-4">
+                              <fieldset>
+                                <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..." required="">
+                              </fieldset>
+                            </div>
+                            <div class="col-md-12">
+                              <fieldset>
+                                <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                              </fieldset>
+                            </div>
+                            <div class="col-md-6">
+                              <fieldset>
+                                <button type="submit" id="form-submit" class="btn">Send it now</button>
+                              </fieldset>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--
+                <div class="col-md-4">
+                    <div class="contact-right-content">
+                        --
+                        <div class="icon"><img src="img/map-marker-icon.png" alt=""></div>
+                        <h4>You can find us on maps</h4>
+                        --
+                        <h5>Email: talkingtimeradio@gmail.com</h5>
+                        <h5>Twitter: @time_lukas</h5>
+                        <h5>Facebook/Messenger: Talking Time with Lukas and Alicia</h5>
+                        <h5>LinkedIn: Lukas Carey / Alicia Hebb</h5>
+
+
+                    </div>
+                </div>
+               -->
+            </div>
+        </div>
+    </section>
 
     <section class="events" id="events-section">
         <div class="content-wrapper">
@@ -271,59 +326,9 @@ http://www.templatemo.com/tm-513-avalon
             </div>
         </div> 
     </section>
-<!--
-    <section class="contact-us" id="contact-section"> 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <form id="contact" action="" method="post">
-                        <div class="row">
-                            <div class="col-md-4">
-                              <fieldset>
-                                <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
-                              </fieldset>
-                            </div>
-                            <div class="col-md-4">
-                              <fieldset>
-                                <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
-                              </fieldset>
-                            </div>
-                             <div class="col-md-4">
-                              <fieldset>
-                                <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..." required="">
-                              </fieldset>
-                            </div>
-                            <div class="col-md-12">
-                              <fieldset>
-                                <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
-                              </fieldset>
-                            </div>
-                            <div class="col-md-6">
-                              <fieldset>
-                                <button type="submit" id="form-submit" class="btn">Send it now</button>
-                              </fieldset>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-right-content">
-                        --
-                        <div class="icon"><img src="img/map-marker-icon.png" alt=""></div>
-                        <h4>You can find us on maps</h4>
-                        --
-                        <h5>Email: talkingtimeradio@gmail.com</h5>
-                        <h5>Twitter: @time_lukas</h5>
-                        <h5>Facebook/Messenger: Talking Time with Lukas and Alicia</h5>
-                        <h5>LinkedIn: Lukas Carey / Alicia Hebb</h5>
 
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
--->
+    <!--
     <footer>
         <div class="container-fluid">
             <div class="row">
@@ -342,6 +347,7 @@ http://www.templatemo.com/tm-513-avalon
             </div>
         </div>
     </footer>
+    -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
