--- a/index.html
+++ b/index.html
@@ -219,33 +219,33 @@ http://www.templatemo.com/tm-513-avalon
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <form id="contact" action="" method="post">
+                    <form id="contact" action="" method="post" data-bss-recipient="a9b53d6751814d50a05cdba028f489aa">
                         <div class="row">
                             <h3 style="color:rgb(232, 232, 235);">Send us a message</h3>
                             <br>
                             <div class="col-md-4">
                               <fieldset>
-                                <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                                <input name="name" type="text" class="form-group" id="name" placeholder="Your name..." required="">
                               </fieldset>
                             </div>
                             <div class="col-md-4">
                               <fieldset>
-                                <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                                <input name="email" type="email" class="form-group" id="email" placeholder="Your email..." required="">
                               </fieldset>
                             </div>
                              <div class="col-md-4">
                               <fieldset>
-                                <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..." required="">
+                                <input name="subject" type="text" class="form-group" id="subject" placeholder="Subject..." required="">
                               </fieldset>
                             </div>
                             <div class="col-md-12">
                               <fieldset>
-                                <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                                <textarea name="message" rows="6" class="form-group" id="message" placeholder="Your message..." required=""></textarea>
                               </fieldset>
                             </div>
                             <div class="col-md-6">
                               <fieldset>
-                                <button type="submit" id="form-submit" class="btn">Send it now</button>
+                                <button type="submit" id="form-group" class="btn">Send it now</button>
                               </fieldset>
                             </div>
                         </div>
@@ -357,6 +357,7 @@ http://www.templatemo.com/tm-513-avalon
     <script src="js/datepicker.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/smart-forms.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
