Connect LinkedIn profile, added footer and some other adjustments

--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@ http://www.templatemo.com/tm-513-avalon
                             <img src="img/lukas.png" alt="Lukas Carey">
                             <span>Speaker</span>
                             <h4>Lukas Carey</h4>
+                            <ul class="social-icons">
+                                <li><a href="https://www.linkedin.com/in/lukas-carey-598750185/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
                             <br>
                             <p><em>"</em>
                                 As a long time educator, trainer and academic, i have extensive experience in helping others achieve their own life and educational goals. With a strong appreciation and passion for education i continue to study and perform research in a wide variety of areas. I work enthusiastically in the training field, helping long term and underprivileged persons develop their own personal and professional skills to gain meaningful work and educational opportunities. 
@@ -204,6 +207,9 @@ http://www.templatemo.com/tm-513-avalon
                             <img src="img/alicia.png" alt="Alicia Hebb">
                             <span>Speaker</span>
                             <h4>Alicia Hebb</h4>
+                            <ul class="social-icons">
+                                <li><a href="https://www.linkedin.com/in/alicia-hebb-a5616089/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
                             <br>
                             <p><em>"</em>
                                 Teacher / LLN Trainer for at-risk youth • Community & Stakeholder Engagement • Artist • Co-host Talking Time with Lukas & Alicia: Criminology • Incarceration • Employability Skills • Education                                
@@ -317,6 +323,19 @@ http://www.templatemo.com/tm-513-avalon
                                             <iframe src="https://open.spotify.com/embed/episode/3DXJQJbJmVn8PwcjBvfCkM" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/7Cdxk0zogdi1lpNe4q7LyO" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                         </ul>
+                                        <div class="container-fluid">
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <p style="margin-top: 1rem;">
+                                                          Handcoded with 
+                                                            <span class="icon has-text-danger">
+                                                              <i class="fa fa-heart"></i>
+                                                            </span>                
+                                                            by <a href="https://www.code.sydney" target="_blank"><font style="color:rgb(42, 82, 143)">Code.Sydney</a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </li>
                                 </ul>
                             </div>
@@ -342,7 +361,6 @@ http://www.templatemo.com/tm-513-avalon
                           by <a href="https://www.code.sydney" target="_blank">Code.Sydney</a>
                         </small>
                     </p>
-
                 </div>
             </div>
         </div>
