Final tweaks before go live

--- a/index.html
+++ b/index.html
@@ -123,12 +123,18 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="flipper first-service">
                             <div class="front">
                                 <div class="icon">
-                                    <img src="img/heart-icon.png" alt="">
+                                  <i class="fa fa-handshake-o"></i>
                                 </div>
-                                <h4>Justice</h4>
+                                <h4>Authentic</h4>
                             </div>
                             <div class="back">
-                                <p>Donec malesuada eu est in mattis. Aenean velit eros, blandit et tortor non, viverra hendrerit velit. Maecenas ut orci nec velit convallis lobortis sit amet ut magna. Ut rhoncus suscipit arcu, sed facilisis risus.</p>
+                                <br>
+                                <br>
+                                <br>
+                                <div class="icon">
+                                    <i class="fa fa-handshake-o"></i>
+                                </div>
+                                <h3>Authentic</h3>
                             </div>
                         </div>
                     </div>
@@ -138,12 +144,18 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="flipper second-service">
                             <div class="front">
                                 <div class="icon">
-                                    <img src="img/heart-icon.png" alt="">
+                                  <i class="fa fa-hand-rock-o"></i>
                                 </div>
-                                <h4>Justice</h4>
+                                <h4>Powerful</h4>
                             </div>
                             <div class="back">
-                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas vel diam porttitor, fermentum ante et, ornare elit. Morbi nec diam ex. Pellentesque habitant morbi tristique senectus.</p>
+                                <br>
+                                <br>
+                                <br>
+                                <div class="icon">
+                                    <i class="fa fa-hand-rock-o"></i>
+                                </div>
+                                <h3>Powerful</h3>
                             </div>
                         </div>
                     </div>
@@ -153,12 +165,18 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="flipper third-service">
                             <div class="front">
                                 <div class="icon">
-                                    <img src="img/heart-icon.png" alt="">
+                                  <i class="fa fa-heart-o"></i>
                                 </div>
-                                <h4>Justice</h4>
+                                <h4>Emotional</h4>
                             </div>
                             <div class="back">
-                                <p>Mauris congue ex eu enim suscipit, in suscipit est efficitur. Donec quis orci malesuada nunc lobortis aliquet et ut lacus. Sed erat magna, fringilla ac imperdiet in, pulvinar quis ante. Maecenas eleifend, sem vitae tristique.</p>
+                                <br>
+                                <br>
+                                <br>
+                                <div class="icon">
+                                    <i class="fa fa-heart-o"></i>
+                                </div>
+                                <h3>Emotional</h3>
                             </div>
                         </div>
                     </div>
@@ -168,12 +186,18 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="flipper fourth-service">
                             <div class="front">
                                 <div class="icon">
-                                    <img src="img/heart-icon.png" alt="">
+                                  <i class="fa fa-leaf"></i>
                                 </div>
-                                <h4>Justice</h4>
+                                <h4>Raw</h4>
                             </div>
                             <div class="back">
-                                <p>Donec venenatis erat at leo dictum, at dictum eros volutpat. Phasellus in dui sed purus varius hendrerit. Duis ac enim ac orci efficitur condimentum vel eget purus. Sed vel massa nulla. Curabitur consequat sem ac velit sollicitudin ornare.</p>
+                                <br>
+                                <br>
+                                <br>
+                                <div class="icon">
+                                    <i class="fa fa-leaf"></i>
+                                </div>
+                                <h3>Raw</h3>
                             </div>
                         </div>
                     </div>
@@ -303,6 +327,7 @@ http://www.templatemo.com/tm-513-avalon
                                 <ul>
                                     <li class="project-item first-child mix design">
                                         <ul class="event-item design">
+                                            <iframe src="https://open.spotify.com/embed/episode/5UkcswHRdHLx0bPIvnk8Sw" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/0OQnGlAQBMJPNpFu10swPp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/1JFdwyvaCThhdal10OFqYY" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/2TDcmIvMeOburTMMJv0tkO" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
