Privacy Policy inclusion

--- a/index.html
+++ b/index.html
@@ -357,6 +357,8 @@ http://www.templatemo.com/tm-513-avalon
                                                               <i class="fa fa-heart"></i>
                                                             </span>                
                                                             by <a href="https://www.code.sydney" target="_blank"><font style="color:rgb(42, 82, 143)">Code.Sydney</a>
+                                                            <b style="color:rgb(71, 67, 67);">|</b>
+                                                            <a style="color:rgb(71, 67, 67);" href="pdf/talkingtime-privacy-policy.pdf" target="_blank">Privacy Policy</a>
                                                     </p>
                                                 </div>
                                             </div>
