--- a/index.html
+++ b/index.html
@@ -327,6 +327,13 @@ http://www.templatemo.com/tm-513-avalon
                                 <ul>
                                     <li class="project-item first-child mix design">
                                         <ul class="event-item design">
+                                            <iframe src="https://open.spotify.com/embed/episode/2EF1HT77VNwgi2v5281c3S" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/4j3as9MeVTv6HmxtAZbOx2" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/3iOS6Aq2jQfPqDYBiqfofw" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/5lojNSKJo2vz41gT0Bddvi" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/5eiXrY4v6Cq2ITSNzJuq7q" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/3OVY7qx6HsLfPFUQ5NKMAx" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/1JIxIpVdsMwqOR49H2mx1F" width="100%" height="232" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/5UkcswHRdHLx0bPIvnk8Sw" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/0OQnGlAQBMJPNpFu10swPp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                             <iframe src="https://open.spotify.com/embed/episode/1JFdwyvaCThhdal10OFqYY" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
